# Eigenheim-app

./: .gitignore  .graphifyignore  BUILD.md  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  LICENSE.md  NOTICE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: README.md  electron-builder.yml  index.html  openapi.json  (+4 more)
engine/: .gitignore  README.md  pyproject.toml  requirements-bundle.txt
engine/eigenheim/: __init__.py  adapters.py  app.py  catalog.py  cli.py  compute.py  constants.py  db.py  dsl.py  goals.py  graph.py  mcp_auth.py  mcp_instructions.py  mcp_server.py  rice.py  scheduler.py  service.py  store_db.py  task_adapters.py
engine/eigenheim/api/: __init__.py  chat.py  datasources.py  decisions.py  deps.py  goals.py  graph.py  health.py  hypotheses.py  logic.py  mcp_keys.py  models.py  reports.py  rice.py  tasks.py
engine/eigenheim/store/: __init__.py  _helpers.py  audit.py  backup.py  catalog_sync.py  chat_repo.py  command_center.py  logic_repo.py  migrations.py  okr_repo.py  reports_repo.py  schema.py  tasks_repo.py
engine/tests/: test_chat.py  test_cli.py  test_decisions.py  test_definitions.py  test_draft_promote.py  test_goals.py  test_golden.py  test_graph.py  test_hypotheses.py  test_phase0.py  test_phase1.py  test_phase1b.py  test_report_missing_logic.py  test_report_mutations.py  test_rice.py  test_sql_injection.py  test_stage_a.py  test_stage_b.py  test_stage_c.py  test_startup_resilience.py  test_tasks.py
(+42 files in other folders)
