[project]
name = "eigenheim-engine"
version = "0.1.0"
description = "eigenheim deterministic compute sidecar (FastAPI + SQLite + MCP)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "mcp>=1.2",
    # pandas/numpy intentionally absent: all numeric aggregation uses stdlib
    # statistics + raw sqlite3. Keeps the bundled sidecar ~30 MB lighter.
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[project.scripts]
eigenheim = "eigenheim.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eigenheim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
